<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidShop</string>
    <string name="app_id">132785496918903</string>
    <string name="admin_login">Login as admin</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="search_action">Search</string>
    <string name="search_action_hint">Search for Movies, Theaters, Actors</string>
    <string name="cart_action">Cart</string>
    <string name="logout_action">Logout</string>
    <string name="page_main">Main</string>
    <string name="page_category">Category</string>
    <string name="page_create_product">Create Product</string>
    <string name="page_update_product">Update Product</string>
    <string name="page_current_order">Less than 1 months</string>
    <string name="page_past_order">Past Orders</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>
    
    <string name="today_deal">Today Deal</string>
    <string name="recent_deal">Recent Deal</string>
    <string name="most_deal">Most Deal</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="my_order">My Orders</string>
    <string name="current_order">Recent orders for 1 months</string>
    <string name="past_order">Past Orders</string>
    <string name="reservations">Reservations</string>
<<<<<<< .mine

=======

>>>>>>> .theirs
    <!-- Drawer -->
    <string-array name="logoutArray">
        <item>Login/Register</item>
    </string-array>
    <string-array name="loginArray">
        <item>Your Orders</item>
        <item>Reservations</item>
        <item>Logout</item>
    </string-array>
    <string-array name="adminArray">
        <item>Welcome Admin</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- AuthenticatorActivity -->
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in�</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to droidshop</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_zero">00:00:00</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timer">Timer</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="title_activity_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="telephone_number">Telephone number</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="secret_question">Secret question</string>
    <string name="secret_answer">Secret answer</string>

    <!-- Geolocation strings -->
    <!-- Messages -->
    <string name="add_geofences_result_success">Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">Invalid latitude(s). Must be in the range -90 to 90 degrees</string>
    <string name="geofence_input_error_longitude_invalid">Invalid longitude(s). Must be in the range -180 to 180 degrees</string>
    <string name="geofence_input_error_radius_invalid">Invalid radius(s). Must be 1 meter or greater.</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">Geofence transition error, code %1$d message %2$s.</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_notification_title">%1$s geofence(s) %2$s</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">Latitude should be in the range -90 to 90 degrees</string>
    <string name="longitude_error_message">Longitude should be in the range -180 to 180 degrees</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="remove_geofences_already_requested_error">Can\'t remove geofences, previous request hasn\'t finished.</string>
    <string name="remove_geofences_id_success">Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_intent_failure">Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_intent_success">Removing all geofences succeeded.</string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <string name="action_settings">DroidShop Settings</string>

    <!-- Application identifiers -->
    <string name="app_tag">LocationUpdates</string>
    <string name="app_description">Displays current address and current or updated location using Location Services</string>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="request_location_updates_in_progress">Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="error_loading_reservation">Failed to load reservations</string>

</resources>