<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".UserProfileActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/profile"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/ibUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/etOPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/label_old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etNPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/label_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etCPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/label_confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <RadioButton
                android:id="@+id/rbtnMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbtnFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/btnDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateofbirth" />

        <EditText
            android:id="@+id/etTele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/telephone_number"
            android:inputType="phone" >
        </EditText>

        <EditText
            android:id="@+id/etMPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/phone_number"
            android:inputType="phone" >
        </EditText>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/label_email_address"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/address"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>

</ScrollView>