<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProductFragment" >
    
    <LinearLayout
        android:id="@+id/llCProduct"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	    
       	<LinearLayout
       	   	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:weightSum="1" >
       	        
       	    <ImageButton
       	        android:id="@+id/ibPImage"
        		android:layout_width="0dp"
    			android:layout_height="300dp"
    			android:layout_weight="0.5" />
       	    
       	    <LinearLayout
        		android:layout_width="0dp"
    			android:layout_height="wrap_content"
    			android:orientation="vertical"
    			android:layout_weight="0.5" >
    	    	
       	        <EditText
       	           	android:id="@+id/etPName"
       	            android:layout_width="match_parent"
    	    		android:layout_height="wrap_content"
            		android:ems="5"
            		android:hint="@string/name" />
       	        
       	        <Spinner
       	            android:id="@+id/spCategory"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content" />
       	        
       	        <EditText
       	            android:id="@+id/etPPrice"
       	            android:layout_width="match_parent"
    	    		android:layout_height="wrap_content"
            		android:ems="5"
            		android:hint="@string/price"
            		android:inputType="phone" />
       	        
       	        <EditText
       	            android:id="@+id/etPQuantity"
       	            android:layout_width="match_parent"
    	    		android:layout_height="wrap_content"
            		android:ems="5"
            		android:hint="@string/quantity"
            		android:inputType="phone" />
       	        
       	        <EditText
       	           	 android:id="@+id/etPDesc"
       	            android:layout_width="match_parent"
    	    		android:layout_height="wrap_content"
            		android:ems="5"
            		android:hint="@string/description"
            		android:singleLine="false"
            		android:lines="6"
            		android:maxLines="10"
            		android:scrollbars="vertical" />
    	    	
       	    </LinearLayout>
       	</LinearLayout>
       	<LinearLayout
       	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:weightSum="1" >
       	        
       	    <Button
            	android:id="@+id/btnClear"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:text="@string/clear" />
       	        
       	    <Button
            	android:id="@+id/btnCreate"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:text="@string/create" />
       	        
    	</LinearLayout>
    </LinearLayout>
</ScrollView>
