<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_manager_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    tools:context=".ProductManagerFragment" >
    
    <LinearLayout
        android:id="@+id/llCProduct"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	
        <ImageButton
       	    android:id="@+id/ibPImage"
        	android:layout_width="fill_parent"
    		android:layout_height="200dp"
    		android:layout_gravity="center_horizontal" />
    	
        <EditText
       	    android:id="@+id/etPName"
       	    android:layout_width="match_parent"
    	   	android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/name" />
        
        <EditText
       	    android:id="@+id/etPPrice"
       	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/price"
            android:inputType="phone" />
       	        
       	<EditText
       	    android:id="@+id/etPQuantity"
       	    android:layout_width="match_parent"
    	  	android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/quantity"
            android:inputType="phone" />
       	
       	<RadioGroup
            android:id="@+id/rgStatus"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/text"
            android:weightSum="1" >
       	    
       	    <RadioButton
       	       	style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
    	  		android:text="INSTOCK"
    	  		android:textColor="@color/text" />
       	    
       	    <RadioButton
       	        style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
    	  		android:text="OUTOFSTOCK"
    	  		android:textColor="@color/text" />
       	    
       	</RadioGroup>
       	        
       	<EditText
       	    android:id="@+id/etPDesc"
       	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/description"
            android:singleLine="false"
            android:lines="6"
            android:maxLines="10"
            android:scrollbars="vertical" />  	    

       	<LinearLayout
       	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:weightSum="1" >
       	        
       	    <Button
            	android:id="@+id/btnClear"
            	style="@style/BootstrapButtonRed"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:text="@string/clear"
            	android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />
       	        
       	    <Button
            	android:id="@+id/btnNext"
            	style="@style/BootstrapButtonGreen"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:text="@string/next"
            	android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />
       	        
    	</LinearLayout>
    </LinearLayout>
</ScrollView>